Revision history for GitHub-MergeVelocity

{{$NEXT}}

0.000003  2015-02-06 18:17:48-05:00 America/Toronto

0.000002  2015-02-05 23:32:12-05:00 America/Toronto
    - Be more liberal when parsing repo urls
    - Fixes pod name of included script

0.000001  2015-02-04 22:16:57-05:00 America/Toronto
    - Initial release