@@ -3,7 +3,7 @@ author  = Olaf Alders <olaf@wundercounter.com>
 license = Perl_5
 copyright_holder = Olaf Alders
 copyright_year   = 2015
-version = 0.000003
+version = 0.000004
 main_module = lib/GitHub/MergeVelocity.pm
 
 [GatherDir]
